Post-v3.3.0
--------------------
   - ovs-appctl:
     * Added new option [-f|--format] to choose the output format, e.g. 'json'
       or 'text' (by default).
     * Added new option [--pretty] to print JSON output in a readable fashion.
   - Python:
     * Added support for different output formats like 'json' to appctl.py and
       Python's unixctl classes.
   - Userspace datapath:
     * Conntrack now supports 'random' flag for selecting ports in a range
       while natting and 'persistent' flag for selection of the IP address
       from a range.
   - The primary development branch has been renamed from 'master' to 'main'.
     The OVS tree remains hosted on GitHub.
     https://github.com/openvswitch/ovs.git


v3.3.0 - 16 Feb 2024
--------------------
   - OVSDB:
     * Support pre-vote mechanism in RAFT that protects the cluster against
       disruptive servers (section 9.6 of the original RAFT paper).  Upgrading
       from older version is supported but it may trigger more leader elections
       during the process, and error logs complaining unrecognized fields may
       be observed on old nodes.
     * New command line option --config-file that allows a fine control over
       remotes and database configuration, including setting options for
       connection methods for relays and active-backup replication.
       For more details see ovsdb-server(1) and ovsdb(7).
     * Make use of cooperative multitasking to improve maintenance of RAFT
       cluster during long running processing such as online schema conversion.
   - OpenFlow:
     * NXT_CT_FLUSH extension is updated to support flushing connections
       based on mark and labels.  'ct-flush' command of ovs-ofctl updated
       to support these new arguments accordingly.
   - ovs-appctl:
     * 'ofproto/trace' now reports OpenFlow rules that make up a conjunctive
       flow match.
     * Output of 'dpctl/show' command no longer shows interface configuration